# api

./: .dockerignore  .env.dist  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  rust.yml
docker/: Dockerfile  docker-entrypoint.sh
migrations/2021-06-07-140502_create_table_users/: up.sql
src/: db.rs  main.rs  schema.rs
src/models/: enums.rs  user.rs
src/ressources/: user_ressource.rs
src/routes/api/: index.rs
