[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "air-balloon-api"
test = true
bench = true
path = "src/main.rs"

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
rocket_contrib = { version = "0.4.0", features = ["json", "diesel_mysql_pool"] }

# Serialization/Deserialization
serde_json = "1.0.64"
serde = "1.0.126"
serde_derive = "1.0.126"
